--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
     <head>
         <nav>
             <div class="menu-area">
                 <div class="name">
-                  <h3>  Influencer products</h3>
+                  <h2>  Influencer products</h2>
                 </div>
                 <div class="menu-items">
                     <p>Home</p>
@@ -25,6 +26,124 @@
                 </div>
             </div>
         </nav>
+        
     </head>
+    <!-- code of section number one ------ -->
+    <section class="containar1">
+        <div class="left">
+            <h1>Start your Journey as<br> 
+
+                Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>
+                    vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="btn1">Preebook now<i class="fa-solid fa-arrow-right-long"></i></button>
+        </div>
+        <div class="right">
+            <img src="images/main-camera.png" alt="">
+        </div>
+    </section>
+    
+    <section>
+        <div class="logo-area">
+            <div class="logo"><img src="logos/Alibaba.svg" alt=""></div>
+            <div class="logo"><img src="logos/Amazon.svg" alt=""></div>
+            <div class="logo"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+            <div class="logo"><img src="logos/Ebay.svg" alt=""></div>
+            <div class="logo"><img src="logos/Rakuten.svg" alt=""></div>
+            <div class="logo"><img src="logos/Target.svg" alt=""></div>
+            <div class="logo"><img src="logos/Walmart.svg" alt=""></div>
+        </div>
+    </section>
+    <section>
+        <div class="collection-area">
+            <div class="title">
+                <h2>Popular Collection</h2>
+            </div>
+        </div>
+        <div class="all-collection">
+            <div class="collection">
+                <img src="images/tripod.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/mic.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/lights.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/gear.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/drone.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/setup.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/camera.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/airpod.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="collection">
+                <img src="images/action.png" alt="">
+                <h1>Flex Tripod</h1>
+                <h3>$50.48</h3>
+                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star-half-stroke"></i>4.99</p>
+                <p>Wordwide shifting </p>
+                <p>available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
