--- a/index.html
+++ b/index.html
@@ -143,6 +143,23 @@
                 <p>Buyers protection possible!</p>
             </div>
         </div>
+        <div class="more">
+            <h4>see more<i class="fa-solid fa-arrow-right-long"></i></h4>
+        </div>
+    </section>
+    <section>
+        <div class="last">
+            <div class="sidel">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="sider">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor <br>
+                    do amet sint. Velit officia consequat duis enim velit mollit.  
+                    <br>Exercitation veniam consequat sunt nostrud amet</p>
+                    <button class="btn2">Join Now<i class="fa-solid fa-arrow-right-long"></i></button>
+            </div>
+        </div>
     </section>
 </main>
 </body>
